# ok-player

./: .gitattributes  .gitignore  AGENTS.md  Directory.Build.props  Directory.Packages.props  OkPlayer.sln  README.md  THIRD-PARTY-NOTICES.md  greptile.json
rust/: Cargo.toml  README.md
rust/crates/okp-core/: Cargo.toml
rust/crates/okp-core/src/: acceptance_evidence.rs  app.rs  aspect_resize.rs  bookmarks.rs  branding.rs  candidate_build.rs  candidate_channel.rs  candidate_lock.rs  chapter_math.rs  clip_export.rs  companion_window.rs  fedora_acceptance.rs  fullscreen_toggle.rs  gapless.rs  hdr.rs  history.rs  history_format.rs  image_luma.rs  key_press.rs  launch_args.rs  lib.rs  linux_renderer.rs  lrc.rs  lyrics.rs  m3u.rs  media_formats.rs  mpv_conf_text.rs  natural_compare.rs  network_media.rs  network_path.rs  nfo_metadata.rs  ok_player_uri.rs  online_subtitles.rs  osc_overflow.rs  osc_visibility.rs  playback_failure.rs  player.rs  player_commands.rs  playlist.rs  poster_frame.rs  (+37 more)
rust/crates/okp-core/tests/: candidate_publish.rs  candidate_toolchain.rs  candidate_workflow_supersession.rs  (+11 more)
rust/crates/okp-ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/crates/okp-linux-gtk/: Cargo.toml  build.rs
rust/crates/okp-mpv/: Cargo.toml  build.rs
rust/crates/okp-test-fixtures/: Cargo.toml
rust/packaging/fedora/: ok-player.spec
rust/packaging/flatpak/: cargo-sources.json  com.befeast.okplayer.json  ok-player-flatpak.patch
rust/packaging/linux/: com.befeast.okplayer.desktop  com.befeast.okplayer.metainfo.xml
rust/patches/: mpv-v0.40.0-wayland-embed.patch
(+419 files in other folders)
