[workspace]
members = [
    "crates/okp-core",
    "crates/okp-ffi",
    "crates/okp-linux-gtk",
    "crates/okp-mpv",
    "crates/okp-test-fixtures",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/BeFeast/ok-player"
rust-version = "1.96"

[workspace.dependencies]
cc = "1.2.54"
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_10"] }
libc = "0.2.186"
pkg-config = "0.3.33"
relm4 = "0.11.0"
roxmltree = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.17"
ureq = "3.3.0"
velopack = "1.2.0"
zbus = "5.16.0"
