[package]
name = "okp-mpv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
links = "mpv"

[dependencies]
libc.workspace = true
okp-core = { path = "../okp-core" }
thiserror.workspace = true

[build-dependencies]
pkg-config.workspace = true

[dev-dependencies]
okp-test-fixtures = { path = "../okp-test-fixtures" }
